Adding JPA, Spring JPA, Spring Data JPA, Spring Web MVC

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
 
     <modules>
         <module>jdbc</module>
+        <module>jpa</module>
         <module>springboot</module>
+        <module>springdatajpa</module>
+        <module>springjpa</module>
         <module>springjdbc</module>
+        <module>springwebmvc</module>
     </modules>
-
 
 </project>
