--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -6,12 +6,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kungfudev.tutorials</groupId>
-    <artifactId>kungfudev-tutorials-jdbc</artifactId>
+    <artifactId>kungfudev-tutorials-jpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <h2.version>1.3.170</h2.version>
+        <hibernate.version>4.3.4.Final</hibernate.version>
+        <java.version>1.7</java.version>
         <junit.version>4.11</junit.version>
+        <logback.version>1.1.2</logback.version>
+        <slf4j.version>1.7.7</slf4j.version>
     </properties>
 
     <build>
@@ -19,8 +23,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -34,6 +38,34 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
+        </dependency>
+
+        <!-- Hibernate -->
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <!-- Logging -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
 
         <!-- JUnit -->
