--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -16,6 +16,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
+        <java.version>1.7</java.version>
         <spring-boot.version>1.1.4.RELEASE</spring-boot.version>
     </properties>
 
@@ -24,8 +25,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
