--- a/springjpa/pom.xml
+++ b/springjpa/pom.xml
@@ -6,11 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kungfudev.tutorials</groupId>
-    <artifactId>kungfudev-tutorials-springjdbc</artifactId>
+    <artifactId>kungfudev-tutorials-springjpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <h2.version>1.3.170</h2.version>
+        <hibernate.version>4.3.4.Final</hibernate.version>
         <java.version>1.7</java.version>
         <junit.version>4.11</junit.version>
         <logback.version>1.1.2</logback.version>
@@ -74,9 +75,37 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Hibernate -->
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <!-- H2 JDBC Driver -->
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
         </dependency>
 
         <!-- Logging -->
@@ -97,14 +126,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
-        </dependency>
-
-        <!-- H2 JDBC Driver -->
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
         </dependency>
 
         <!-- JUnit -->
